--- a/report/aco_report.tex
+++ b/report/aco_report.tex
@@ -519,13 +519,21 @@ Na podstawie wcześniejszych testów i analizy wygenerowanych wykresów, wykonal
     \includegraphics{./figures/inst_01_rnd_final_smooth.pdf}
     \caption{optymalne wartości parametrów}
 \end{figure}
-
+\vspace{2cm}
 \\
 Stosunek optimum do uzyskanej wartości wynosi $ \frac{2582.667}{2752.333} \approx 93.84\% $\\
 Zważywszy na szybkość osiągania stabilizacji oraz małą różnicę w stosunku do nierealnego optimum, wynik jest bardzo zadowalający.
 
+\newpage
 \section{Wnioski}
-Podsumowanie algorytmu
+Algorytm ACO po odpowiednich modyfikacjach nadaje się do problemu FSP (Flow-shop Scheduling Problem), a po zastosowaniu odpowiednich parametrów zwraca zadowalające (ok. 95\% wartości optymalnej) wyniki.
 
+
+\vspace{2,5cm}
+\section{Bibliografia}
+\begin{enumerate}
+  \item pierwszy
+  \item drugi
+\end{enumerate}
 
 \end{document}
